[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'ip-planet-substrate-runtime-wasm'
version = '1.0.0'

[lib]
crate-type = ['cdylib']
[dependencies.ip-planet-substrate-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['ip-planet-substrate-runtime/std']
[profile.release]
lto = true
panic = 'abort'

[workspace]
members = []
